[package]
name = "context"
version = "0.1.3"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]
license = "MIT/ISC"
repository = "https://github.com/zonyitoo/context-rs"
description = "Context in Rust"
readme = "README.md"
keywords = ["context"]

[dependencies]
memmap = "^0.2"
libc = "^0.1.10"
log = "^0.3.1"

[profile.release]
debug = true
debug-assertions = true
